syntax = "proto3";

package product;

option go_package = "../product";

message Product {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string created_at = 6;
  string updated_at = 7;
}

message ProductRequest{
    ProductPayload payload = 1;
}

message ProductPayload {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock = 4;
}

service ProductService {
  rpc CreateProduct(ProductRequest) returns (Empty);
  rpc GetProductByID(GetProductRequest) returns (Product);
  rpc ListProducts(Empty) returns (ProductList);
  rpc UpdateProduct(GetProductRequest) returns (Product);
  rpc DeleteProduct(GetProductRequest) returns (Empty);
}

message GetProductRequest {
  uint32 id = 1;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}